# dockerfile-recover

./: .coveragerc  .dockerignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-container.txt  requirements-dev.txt
.github/workflows/: release.yaml  release_dockerhub.yaml  release_pypi.yaml  test.yaml
dockerfile_recover/: __main__.py  docker_api.py  generator.py
dockerfile_recover/parser/: __init__.py  exceptions.py  nop.py  parser.py  shell.py
tests/parser/: test_parser.py  test_shell.py
tests/unit/parser/: test_nop.py
